--- a/assets/css/gallery/gallery.css
+++ b/assets/css/gallery/gallery.css
@@ -66,7 +66,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: auto;
+    height: 100%;
 }
 
 /* Image styling */
